--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-https://script.google.com/macros/s/AKfycbxW3nJKGO_ZvZv2xXatHIal-AfwySfVQAw21yGBglwqj3g8mJ0dBv-ZRQNsHSldNPdJ1w/exec
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbxW3nJKGO_ZvZv2xXatHIal-AfwySfVQAw21yGBglwqj3g8mJ0dBv-ZRQNsHSldNPdJ1w/exec">
+  </head>
+  <body>
+  </body>
+</html>
